force-app/main/default/objects/sansancard__ScanToSalesforce_Setting__c/sansancard__ScanToSalesforce_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ScanToSalesforce Setting</label>
</CustomObject>