force-app/main/default/objects/sansancard__ScanToSalesforce_Setting__c/fields/sansancard__AccountRecordType__c.field-meta.xml
<CustomField>
    <fullName>sansancard__AccountRecordType__c</fullName>
    <label>AccountRecordType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>