force-app/main/default/objects/sansancard__ScanToSalesforce_Setting__c/fields/sansancard__AccountValue__c.field-meta.xml
<CustomField>
    <fullName>sansancard__AccountValue__c</fullName>
    <label>AccountValue</label>
    <type>TextArea</type>
</CustomField>