force-app/main/default/objects/sansancard__ScanToSalesforce_Setting__c/fields/sansancard__ContactRecordType__c.field-meta.xml
<CustomField>
    <fullName>sansancard__ContactRecordType__c</fullName>
    <label>ContactRecordType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>