force-app/main/default/objects/sansancard__ScanToSalesforce_Setting__c/fields/sansancard__ContactValue__c.field-meta.xml
<CustomField>
    <fullName>sansancard__ContactValue__c</fullName>
    <label>ContactValue</label>
    <type>TextArea</type>
</CustomField>