force-app/main/default/objects/sansancard__ScanToSalesforce_Setting__c/fields/sansancard__DisableDisplayReport__c.field-meta.xml
<CustomField>
    <fullName>sansancard__DisableDisplayReport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable&quot;DisplayReport&quot;</label>
    <type>Checkbox</type>
</CustomField>