force-app/main/default/objects/sansancard__ScanToSalesforce_Setting__c/fields/sansancard__DisplayReportId__c.field-meta.xml
<CustomField>
    <fullName>sansancard__DisplayReportId__c</fullName>
    <label>DisplayReportId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>