force-app/main/default/objects/sansancard__ScanToSalesforce_Setting__c/fields/sansancard__DisplayReportName__c.field-meta.xml
<CustomField>
    <fullName>sansancard__DisplayReportName__c</fullName>
    <label>DisplayReportName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>