force-app/main/default/objects/sansancard__ScanToSalesforce_Setting__c/fields/sansancard__LeadRecordType__c.field-meta.xml
<CustomField>
    <fullName>sansancard__LeadRecordType__c</fullName>
    <label>LeadRecordType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>