force-app/main/default/objects/sansancard__ScanToSalesforce_Setting__c/fields/sansancard__LeadValue__c.field-meta.xml
<CustomField>
    <fullName>sansancard__LeadValue__c</fullName>
    <label>LeadValue</label>
    <type>TextArea</type>
</CustomField>