force-app/main/default/objects/sansancard__ScanToSalesforce_Setting__c/fields/sansancard__TransferDest__c.field-meta.xml
<CustomField>
    <fullName>sansancard__TransferDest__c</fullName>
    <label>Transfer destination</label>
    <length>8</length>
    <type>Text</type>
</CustomField>